🔒 Add 2FA via email and JWT with security improvements
- Implement email verification code on login
- Verification checks for expired, already used, and invalid codes
- JWT generation with RS256 and token validation
- Client service JWT filter handles expired, invalid, and tampered tokens
- Prevent role tampering in JWT payload
- XSS protection: username/email validation rejects dangerous characters
- CSRF remains disabled for stateless JWT